# QT_design_patterns

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
abstract_factory/: README.md  abstractfactorydialog.cpp  abstractfactorydialog.h  abstractfactorydialog.ui  normalshapefactory.cpp  normalshapefactory.h  rectangle.cpp  rectangle.h  roundedrectangle.cpp  roundedrectangle.h  roundedshapefactory.cpp  roundedshapefactory.h  roundedsquare.cpp  roundedsquare.h  roundedtriangle.cpp  roundedtriangle.h  shape.cpp  shapefactory.cpp  shapefactory.h  square.cpp  square.h  triangle.cpp  triangle.h
factory_method_v1/: README.md  basecar.cpp  carfactory.cpp  carfactory.h  factorymethodclient.cpp  factorymethodclient.h  fiat.cpp  fiat.h  honda.cpp  honda.h  toyota.cpp  toyota.h
singleton/: README.md  logger.cpp  logger.h  singletonauxdialog.cpp  singletonauxdialog.h  singletonauxdialog.ui  singletonmaindialog.cpp  singletonmaindialog.h  singletonmaindialog.ui
singleton/log/: 2024_08_18_21_37_55.txt  2024_08_18_21_38_07.txt  2024_08_18_21_38_17.txt  2024_08_18_21_51_43.txt
